--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: python
-python: 2.7.12
+python:
+  - "2.7"
 
 cache:
   directories:
@@ -10,24 +11,22 @@ before_cache:
 env:
   global:
     - CCNET_CONF_DIR=/tmp/ccnet SEAFILE_CONF_DIR=/tmp/seafile-data
-    - secure: "AFqKit45l2758+TrH/l0SFN6k5lc9ALmZGPBGbGeYSzSGZ4+Cx7tHyQwgZgiitf9BzVci1ClaIMfNxp8BG6ECDAMXcbMyAksItG2aM/x//YT59ljgrwnNeZFfwh8LWuZslboxXx/Pfrv9QSX0c6dcTyEfKFLVKW1U2bn4MxdF+A="
-    - secure: "cXNbNl1wiIXk7D6jviQa4tg0XfAPPT/uze2dchniYZm/5clxiOXuLAfFqXrF+morakWv7+nZeoXh+RFMSllQvwJlGGRoD01hazoJTGhoV+7Be2KHTGG/YwUKT/PzxgRqPDNW3XUkPWChQQXjP+nb6QjbMrXcbNOgE+Glb23Gz0k="
 
-# install & start seafile-server CE v6.3, install phantomjs & nginx
+# install & start seafile-server CE, install nginx
 before_install:
   # npm token to fetch private repos
   - echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" > ~/.npmrc
   # build/init/start ccnet-server/seafile-server
-  - git clone --depth=1 --branch=7.0 git://github.com/haiwen/seafile-test-deploy /tmp/seafile-test-deploy
+  - git clone --depth=1 --branch=master git://github.com/haiwen/seafile-test-deploy /tmp/seafile-test-deploy
   - cd /tmp/seafile-test-deploy && ./bootstrap.sh && cd -
-  # install phantomjs
+
+  # install nginx
   - ./tests/install-deps.sh
   - npm install -g requirejs
-  - openssl aes-256-cbc -K $encrypted_bdef00a70236_key -iv $encrypted_bdef00a70236_iv -in .travis/travis_deploy_key.enc -out travis_deploy_key -d && mv travis_deploy_key ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa
 
 # install seahub requirements
 install:
-  - pip install -r dev-requirements.txt --allow-all-external --allow-unverified PIL
+  - pip install -r dev-requirements.txt
   - pip install -r test-requirements.txt
 
 before_scipt: true
@@ -37,10 +36,7 @@ script:
   - .travis/test_seahub_changes.sh; rc=$?; if [[ $rc == 0 ]]; then ./tests/seahubtests.sh init && ./tests/seahubtests.sh runserver && ./tests/seahubtests.sh test; else true; fi
 
 after_success:
-  # notify seafile-docs to rebuild if master is updated
-  # - test $TRAVIS_PULL_REQUEST = "false" && test $TRAVIS_BRANCH = "master" && .travis/rebuild-branches.sh
-
-  # making dist assets if current branch(master/6.3/6.2) is updated
+  # making dist assets if current branch(master/7.0) is updated
   - test $TRAVIS_PULL_REQUEST = "false" && .travis/dist_and_push.sh
 
 after_failure: true
@@ -58,4 +54,3 @@ branches:
   only:
     - master
     - 7.0
-    - seafile-docs
